fixing paths for shows and footer fix on tablet

--- a/app/styles/modules/_footer.scss
+++ b/app/styles/modules/_footer.scss
@@ -71,6 +71,8 @@
 
 .footer {
   @include tablet {
+    position: static;
+    
     &__brands {
       width: 100%;
       text-align: center;
