--- a/app/styles/modules/_layout.scss
+++ b/app/styles/modules/_layout.scss
@@ -26,7 +26,7 @@
     @include clearfix;
     clear: both;
     background-color: #222222;
-    padding: 20px;
+    padding: 10px;
     margin-top: 20px;
     margin-left: 20px;
   }
@@ -97,7 +97,7 @@
     }
 
     &__main {
-      padding: 0 10px 220px;
+      padding: 0 10px 20px;
     }
 
     &__sidebar {
@@ -111,13 +111,17 @@
     &__graphics {
       display: none;
     }
+
+    &__media {
+      padding: 10px;
+    }
+
+    &__medium {
+      padding: 10px;
+    }
   }
 
   @include mobile {
-    &__main {
-      padding: 0 10px 380px;
-    }
-
     &__col {
       width: 100%;
       margin-bottom: 10px;
@@ -126,7 +130,6 @@
 
     &__media {
       margin: 0;
-      padding: 10px;
     }
 
     &__medium {
