--- a/app/styles/modules/_shows.scss
+++ b/app/styles/modules/_shows.scss
@@ -31,6 +31,7 @@
   &__city {
     padding-right: 14px;
     display: inline-block;
+    font-weight: bold;
   }
 
   &__link--more {
